# chunknet

./: .gitignore  pyproject.toml
chunknet/: autoencoder.py  superchunk.py  util.py
models/: autoencoder.yaml
