[tool.poetry]
name = "chunknet"
version = "0.1.0"
description = "Neural network to generate Minecraft maps"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
