[tool.poetry]
name = "chunknet"
version = "0.1.0"
description = "Neural network to generate Minecraft maps"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
numpy = "^1.24.3"
click = "^8.1.3"
pytorch-lightning = "^2.0.2"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
